--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ services:
   db:
     image: postgres:17
     environment:
-      - POSTGRES_USER=pgodoo16
-      - POSTGRES_PASSWORD=pgodoo16
+      - POSTGRES_USER=odoo16
+      - POSTGRES_PASSWORD=odoo16
+      - POSTGRES_DB=odoo16
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - odoo-db-data:/var/lib/postgresql/data
@@ -16,12 +17,19 @@ services:
       - db
     ports:
       - "8095:8069"
+    environment:
+      - HOST=db
+      - USER=odoo16
+      - PASSWORD=odoo16
+      - DB_NAME=odoo16
+      - DB_FILTER=odoo16
     volumes:
       - ./odoo:/mnt/extra-addons/odoo
       - ./addons:/mnt/extra-addons/addons
       - ./odoo_module:/mnt/extra-addons/odoo_module
       - ./config:/etc/odoo
       - odoo-web-data:/var/lib/odoo
+    command: -- --database=odoo16 --db_host=db --db_user=odoo16 --db_password=odoo16 --init=base
     restart: always
 
 volumes:
